<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp7">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_title_container"
            style="@style/medium_input_container"
            android:hint="@string/category_title"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_category_title"
                style="@style/medium_size_input"
                android:maxLines="1"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp70"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btnSave"
                style="@style/button"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:text="@string/save"/>

            <Button
                android:id="@+id/btnRemove"
                style="@style/button.small.light_danger"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/dp7"
                android:layout_width="0dp"
                android:text="@string/remove" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>