<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userModel"
            type="co.nikavtech.anote.models.UserModel" />

        <variable
            name="viewModel"
            type="co.nikavtech.anote.screens.fragments.login.LoginViewModel" />

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/large_padding"
        android:background="@color/white"
        tools:context=".screens.splash.SplashFragment">

        <TextView
            android:id="@+id/textView2"
            style="@style/header.very_large_header"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="20dp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp15"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email"
                    style="@style/medium_input_container"
                    android:layout_marginTop="32dp"
                    android:hint="@string/email"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_email"
                        android:text="@={userModel._email}"
                        style="@style/medium_size_input" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password"
                    style="@style/medium_input_container"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    tools:ignore="MissingConstraints">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txt_password"
                        style="@style/medium_size_input"
                        android:text="@={userModel._password}"
                        android:inputType="textPassword">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_login"
            style="@style/button"
            android:layout_width="0dp"
            android:text="@string/login"
            android:onClick="@{()->viewModel.doLogin(userModel)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            android:backgroundTint="@{viewModel.loginIsSuccess ? @color/success : @color/teal_700}"
            app:layout_goneMarginBottom="@dimen/dp7"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp7"
            android:text="@string/not_yet_register"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/button_login"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/goto_register"
            style="@style/link"
            android:text="@string/register"
            app:layout_constraintEnd_toStartOf="@id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/button_login"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
